# hatch_webassets

./: CHANGELOG.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.md
examples/litestar_example/: pyproject.toml
examples/simple/: pyproject.toml
examples/web/: pyproject.toml
src/hatch_webassets/: __init__.py  hooks.py
