[project]
name = "litestar-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hasansezertasan", email = "hasansezertasan@gmail.com" }
]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
litestar-example = "litestar_example:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
